--- a/package.json
+++ b/package.json
@@ -13,11 +13,21 @@
     },
     "dependencies": {
         "@babel/runtime-corejs3": "^7.17.2",
+        "babel": "^6.23.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2"
     },
     "devDependencies": {
+        "babel-eslint": "^10.1.0",
         "babel-preset-nano-react-app": "^0.1.0",
+        "eslint": "^7.32.0",
+        "eslint-config-airbnb": "^19.0.4",
+        "eslint-config-prettier": "^8.4.0",
+        "eslint-plugin-import": "^2.25.4",
+        "eslint-plugin-jsx-a11y": "^6.5.1",
+        "eslint-plugin-react": "^7.28.0",
+        "prettier": "^2.5.1",
+        "rimraf": "^3.0.2",
         "vite": "^2.6.7"
     },
     "babel": {
