--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dependencies": {
         "@babel/runtime-corejs3": "^7.17.2",
         "babel": "^6.23.0",
+        "node-sass": "^7.0.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2"
     },
@@ -28,6 +29,7 @@
         "eslint-plugin-react": "^7.28.0",
         "prettier": "^2.5.1",
         "rimraf": "^3.0.2",
+        "sass": "^1.49.9",
         "vite": "^2.6.7"
     },
     "babel": {
